# marimushka

./: .codefactor.yml  .gitignore  .marimushka.toml.example  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  RECIPES.md  REPOSITORY_ANALYSIS.md  SECURITY.md  action.yml  pyproject.toml  ruff.toml
.claude/: analysis.md  plan.md
.github/: template.yml
.github/workflows/: pytest.yml  rhiza.yml  rhiza_benchmarks.yml  rhiza_release.yml  test_action.yml
.rhiza/: history  template.yml
.rhiza/requirements/: tests.txt
.rhiza/templates/minibook/: custom.html.jinja2
_site/: index.html
actions/export/: README.md
book/: book.mk
book/marimo/notebooks/: rhiza.py
docs/: CODE_TOUR.md  CONFIGURATION.md  DEBUGGING.md  DESIGN.md  FAQ.md  FINAL_IMPROVEMENTS.md  MIGRATION.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-module-structure-refactoring.md  ADR-002-progress-callback-api.md  ADR-003-security-model.md  ADR-004-template-system-design.md  ADR-005-parallel-export-strategy.md  README.md
docs/architecture/: data-flow.md
src/marimushka/: __init__.py  audit.py  cli.py  config.py  dependencies.py  exceptions.py  export.py  notebook.py  orchestrator.py  security.py  validators.py
src/marimushka/templates/: README.md  tailwind.html.j2  tailwind.min.css
src/tests/: test_export.py
templates/: README.md
tests/: Makefile.tests  conftest.py  test_audit.py  test_cli.py  test_complete.py  test_config.py  test_dependencies.py  test_e2e.py  test_exceptions.py  test_export.py  test_help.py  test_integration.py  test_notebook.py  test_properties.py  test_security.py  tests.mk
tests/resources/apps/: charts.py
tests/resources/html_output/: complete_output.html  no_apps_output.html
tests/resources/marimo/apps/: charts.py
tests/resources/marimo/notebooks/: fibonacci.py  penguins.py
tests/resources/marimo/notebooks_wasm/: penguins.py
tests/resources/notebooks/: fibonacci.py  penguins.py
tests/resources/notebooks_wasm/: fibonacci.py  penguins.py
tests/test_rhiza/: test_makefile.py  test_makefile_api.py  test_readme.py
tests/utils/: link_validator.py
